# ADV-ADK-Research-Hub

./: .adk.json  .codex.yaml  .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlint.json  .npmrc  .pre-commit-config.yaml  ADV-ADK-Research-Hub.code-workspace  AGENTS.md  CHANGELOG.md  Dockerfile  ENGLISH_ONLY_NOTICE.md  LICENSE  README.md  assistant.py  cloudrun.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  shell_config.sh
.codex/: setup.sh
.github/: markdown-link-check-config.json  pull_request_template.md
analytics/: bigquery_sink.py  ga4_sync.py  kpi_reporter.py
config/: README.md  settings.yaml  vertex_ai.yaml  vertex_config.yaml
docs/: ADK_quickstart.md  METHODOLOGY.md  Phase_4_Blueprint.md  RESEARCH_GOALS.md  ab_testing_framework.md  adk_docs_snapshot.md  agent_system_overview.md  amd_developer_ai.md  chatgpt_research_workflow.md  config_agent_overview.md  contribution_guide.md  crm_integration.md  executive_summary.md  gemini_api_docs.md  github_chatgpt_integration.md  governance_agent_concept.md  governance_agent_overview.md  ibm_ai_learning.md  index.md  integration_guide_o3.md  kaggle_prompt_engineering_summary.md  link_cache.txt  microsoft_ai_builder.md  nvidia_optimizations.md  o3_deep_research_prompt.md  openai_api_docs.md  refs.md  release_notes.md  reporting_dashboard.md  risk_and_drift_mitigation.md  risk_mitigation.md  source_index.json  test_chatgpt.md  tree.md  vertex_ai_quickstart.md  world_agent_integration.md
examples/: ads_integration_workflow.py  marketing_workflow.py  simple_workflow.py  vertex_workflow.py
flows/: client_workflow.yaml  marketing_flow.yaml  strategy_flow.yaml
google/: __init__.py
marketing_assistant/: README.md  __init__.py  ga_client.py  google_ads_client.py
meta/: source_integration_log.md
o3research/: README.md  __init__.py  analytics.py  lifecycle.py  mcp_server.py
optimization/: __init__.py  prompt_tuner.py
orchestration/: __init__.py  multi_client_runner.py
prompt_catalog/: ab_test_plan.md  ab_test_plan.meta.yaml  account_based_marketing.md  account_based_marketing.meta.yaml  ad_copywriting.md  ad_copywriting.meta.yaml  affiliate_program.md  affiliate_program.meta.yaml  ai_copy_generation.md  ai_copy_generation.meta.yaml  analytics_training.md  analytics_training.meta.yaml  api_integration_plan.md  api_integration_plan.meta.yaml  app_store_optimization.md  (+189 more)
(+302 files in other folders)
