[project]
name = "o3research"
dynamic = ["version"]
description = "O3 Deep Research tools"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PyYAML>=6.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.99.0",
    "google-adk>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "vertexai>=1.0.0",
    "google-cloud-aiplatform>=1.39.0",
    "google-cloud-sdk>=0.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["o3research*", "marketing_assistant*"]
exclude = ["node_modules*", "config*"]

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://github.com/ADV-IT-Performance-Corp/ADV-ADK-Research-Hub"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
